--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "my-project",
+  "homepage": "https://mdhasanibrahim.github.io/PortfolioWebsite",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "gh-pages": "^3.2.3",
     "ityped": "^1.0.3",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
@@ -16,6 +18,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
